Moved questions file to index to fix console issue.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "devStart": "nodemon index.js"
   },
   "devDependencies": {
     "jest": "^27.0.0"
@@ -13,7 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "inquirer": "^8.2.4",
+    "nodemon": "^3.0.2",
     "svg.js": "^2.7.1"
   }
 }
